--- a/html/css/main.css
+++ b/html/css/main.css
@@ -69,14 +69,61 @@ body {
   margin-top: 1rem;
   margin-bottom: 0.5rem;
 }
-#wrap-hero section div.whitebg p {
-  padding: 0 2rem;
+#wrap-hero section div.whitebg ul {
   text-align: center;
+  padding: 0;
+  margin-top: 0;
+  list-style: none;
+}
+#wrap-hero section div.whitebg ul li {
+  font-size: 1.2rem;
+  line-height: 1.8rem;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  margin: 1rem 0;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  flex-basis: 300px;
+  border-right: 1px solid rgba(0, 0, 0, 0.4);
+}
+
+.column:last-of-type {
+  border: none;
+}
+
+main .mark {
+  padding: 2rem;
+}
+main .mark p {
+  margin: 0.5em 0;
+}
+main .mark ul {
+  padding-left: 1.5rem;
+}
+main .mark li {
+  margin-bottom: 0.5rem;
+}
+main .mark li:last-of-type {
+  margin-bottom: 0;
 }
 
 @media only screen and (min-width: 600px) {
   #callUs {
     font-size: 1rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  .column {
+    border: none !important;
   }
 }
 
